# SerenMeninges

./: .gitignore  Makefile  README.md  SerenMeninges.slnx
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
SerenMeninges/: README.md  SerenMeninges.pyproj  pyproject.toml
SerenMeninges/seren_meninges/: __init__.py  auth.py  config.py  credentials.py  version.py
SerenMeninges/seren_meninges/viewer/: __init__.py  shell.html  tokens.css
SerenMeninges/tests/: test_config.py  test_credentials.py  test_version.py  test_viewer.py
